--- a/end/eShop.AppHost/Properties/launchSettings.json
+++ b/end/eShop.AppHost/Properties/launchSettings.json
@@ -8,7 +8,8 @@
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DOTNET_ENVIRONMENT": "Development",
         "DOTNET_LAUNCH_PROFILE": "http",
-        "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "http://localhost:16119"
+        "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "http://localhost:16119",
+        "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "https://localhost:22000"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:18848"
@@ -21,7 +22,23 @@
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DOTNET_ENVIRONMENT": "Development",
         "DOTNET_LAUNCH_PROFILE": "https",
-        "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "https://localhost:18076"
+        "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "https://localhost:18076",
+        "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "https://localhost:22000"
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "https://localhost:19888"
+    },
+    "generate-manifest": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "launchUrl": "",
+      "commandLineArgs": "--publisher manifest --output-path aspire-manifest.json",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "DOTNET_ENVIRONMENT": "Development",
+        "DOTNET_LAUNCH_PROFILE": "https",
+        "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "https://localhost:18076",
+        "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "https://localhost:22000"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:19888"
