--- a/end/eShop.AppHost/eShop.AppHost.csproj
+++ b/end/eShop.AppHost/eShop.AppHost.csproj
@@ -11,7 +11,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Hosting" Version="8.0.0-preview.4.24156.9" />
+	  <PackageReference Include="Aspire.Hosting.AppHost" Version="8.0.0-preview.6.24214.1" />
+	  <PackageReference Include="Aspire.Hosting.MongoDB" Version="8.0.0-preview.6.24214.1" />
+	  <PackageReference Include="Aspire.Hosting.PostgreSQL" Version="8.0.0-preview.6.24214.1" />
   </ItemGroup>
 
   <ItemGroup>
