--- a/start/eShop.AppHost/Properties/launchSettings.json
+++ b/start/eShop.AppHost/Properties/launchSettings.json
@@ -8,7 +8,9 @@
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DOTNET_ENVIRONMENT": "Development",
         "DOTNET_LAUNCH_PROFILE": "http",
-        "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "http://localhost:16119"
+        "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "http://localhost:16119",
+        "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "http://localhost:22246",
+        "ASPIRE_ALLOW_UNSECURED_TRANSPORT": "true"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:18848"
@@ -21,7 +23,8 @@
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DOTNET_ENVIRONMENT": "Development",
         "DOTNET_LAUNCH_PROFILE": "https",
-        "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "https://localhost:18076"
+        "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "https://localhost:18076",
+        "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "https://localhost:22060"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:19888"
