Adding updating cosmos module

--- a/end/Catalog.API/Catalog.API.csproj
+++ b/end/Catalog.API/Catalog.API.csproj
@@ -13,4 +13,8 @@
     <ProjectReference Include="..\eShop.ServiceDefaults\eShop.ServiceDefaults.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Seed\" />
+  </ItemGroup>
+
 </Project>
