--- a/end/eShop.AppHost/eShop.AppHost.csproj
+++ b/end/eShop.AppHost/eShop.AppHost.csproj
@@ -12,12 +12,13 @@
 
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting" Version="8.0.0-preview.4.24156.9" />
+    <PackageReference Include="Aspire.Hosting.Azure" Version="8.0.0-preview.4.24156.9" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Basket.API\Basket.API.csproj" />
     <ProjectReference Include="..\Catalog.API\Catalog.API.csproj" />
-    <ProjectReference Include="..\Catalog.Data.Manager\Catalog.Data.Manager.csproj" />
+    <ProjectReference Include="..\Review.API\Review.API.csproj" />
     <ProjectReference Include="..\WebApp\WebApp.csproj" />
   </ItemGroup>
 
