--- a/end/Catalog.API/Catalog.API.csproj
+++ b/end/Catalog.API/Catalog.API.csproj
@@ -1,5 +1,4 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <RootNamespace>eShop.Catalog.API</RootNamespace>
@@ -7,14 +6,11 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\Catalog.Data\Catalog.Data.csproj" />
     <ProjectReference Include="..\eShop.ServiceDefaults\eShop.ServiceDefaults.csproj" />
   </ItemGroup>
-
   <ItemGroup>
-    <PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="8.0.0-preview.3.24105.21" />
+    <PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="8.0.0" />
   </ItemGroup>
-
 </Project>
